src/test/deca/context/invalid/testUndefinedSuperclass.deca
// Description : La La super classe donnée est indéfini
class B extends A {
}
